Feat 4 implement tests feature (#16)
* test: Stream API training

* Implement CourseOperations using Stream API

* Add migration scripts for tables

* Revert "Implement CourseOperations using Stream API"

This reverts commit 95a4ad82f6be0d5d1b5029d810dce27314133328.

* Revert "test: Stream API training"

This reverts commit 95f1f34e44c1d71ce039aab2ab292c4be3abb1b7.

* [Spring Data JPA] Create corresponding entities and repositories

* [DTO] Create Test related DTO's

* [Mapper] Create Tests related mappers

* [Endpoint] Implement Test and Question endpoints

* refactor: convert all mappers to Spring beans

---------
