# src/main/resources/openapi.yaml
@@ -157,6 +157,22 @@ paths:
       responses:
         '204':
           description: Lesson deactivated
+  /tests:
+    post:
+      summary: Create a new test
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateTestDTO'
+      responses:
+        '201':
+          description: Created test
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetTestDTO'
 
 components:
   schemas:
@@ -262,3 +278,82 @@ components:
         courseId:
           type: integer
           format: int64
+
+    CreateTestDTO:
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+          description: "Test name"
+        description:
+          type: string
+          description: "Test description"
+        lessonId:
+          type: integer
+          format: int64
+          description: "ID of the lesson"
+    GetTestDTO:
+      type: object
+      required:
+        - name
+        - questions
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        questions:
+          type: array
+          minItems: 1
+          items:
+            $ref: '#/components/schemas/GetQuestionDTO'
+
+    CreateQuestionDTO:
+      type: object
+      required:
+        - text
+        - answers
+      properties:
+        text:
+          type: string
+        lessonId:
+          type: integer
+          format: int64
+        answers:
+          type: array
+          minItems: 1
+          items:
+            $ref: '#/components/schemas/CreateAnswerDTO'
+    GetQuestionDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        text:
+          type: string
+        answers:
+          type: array
+          items:
+            $ref: '#/components/schemas/GetHiddenAnswerDTO'
+
+    CreateAnswerDTO:
+      type: object
+      required:
+        - text
+      properties:
+        text:
+          type: string
+        isCorrect:
+          type: boolean
+    GetHiddenAnswerDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        text:
+          type: string
+
